<?xml version="1.0" encoding="UTF-8"?>
<project 
    xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                        http://maven.apache.org/xsd/maven-4.0.0.xsd">


    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/>
    </parent>

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.kanokna</groupId>
	<artifactId>windows-store-server</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>windows-store-server</name>
	<description>The parent pom.xml for project of window store by company the Kanokna</description>
	<url>https://www.kanokna.com</url>
    <inceptionYear>2025</inceptionYear>


	<modules>
        <module>config-server</module>
        <module>shared/shared-kernel</module>
        <module>api-contracts</module>
        <module>gateway</module>
        <module>services/account-service</module>
        <module>services/cart-service</module>
        <module>services/catalog-configuration-service</module>
        <module>services/pricing-service</module>
        <module>services/search-service</module>
	</modules>


	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
            <comments>The MIT License (MIT)</comments>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>vonomarap</id>
			<name>Vlad V. Paramonov</name>
			<email>CornerDev@protonmail.com</email>
			<organization>Kanokna</organization>
			<organizationUrl>https://github.com/vonomarap</organizationUrl>
            <roles>
                <role>Architect</role>
                <role>Backend Developer</role>
                <role>Frontend Developer</role>
            </roles>
            <timezone>UTC+1</timezone>
		</developer>
	</developers>

	<scm>
		<connection>https://github.com/vonomarap/kanokna.git</connection>
		<developerConnection>https://github.com/vonomarap/kanokna.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/vonomarap/kanokna.git</url>
	</scm> 

	<properties>
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-boot.version>4.0.0</spring-boot.version>
		<lombok.version>1.18.40</lombok.version>
		<spring-cloud.version>2024.0.0</spring-cloud.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <grpc-spring-boot-starter.version>3.1.0.RELEASE</grpc-spring-boot-starter.version>
        <testcontainers.version>1.19.3</testcontainers.version>
        <archunit.version>1.2.1</archunit.version>
        <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
      <dependency>
        <groupId>com.kanokna</groupId>
        <artifactId>shared-kernel</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.kanokna</groupId>
        <artifactId>api-contracts</artifactId>
        <version>${project.version}</version>
      </dependency>

            <!-- gRPC -->
            <dependency>
                <groupId>net.devh</groupId>
                <artifactId>grpc-server-spring-boot-starter</artifactId>
                <version>${grpc-spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>net.devh</groupId>
                <artifactId>grpc-client-spring-boot-starter</artifactId>
                <version>${grpc-spring-boot-starter.version}</version>
            </dependency>

            <!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.redis.testcontainers</groupId>
                <artifactId>testcontainers-redis-junit</artifactId>
                <version>2.1</version>
            </dependency>

            <!-- ArchUnit -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>

            <!-- API Documentation -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-common</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            
            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            
            <!-- Observability: JSON Logs -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>7.4</version>
            </dependency>
            
            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
		</dependencies> 
	</dependencyManagement>
	
	<build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>7.8.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.2.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>generate-docs</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>process-asciidoc</goal>
                        </goals>
                        <configuration>
                            <enableVerbose>true</enableVerbose>
                            <backend>html</backend>
                            <doctype>book</doctype>
                            <preserveDirectories>true</preserveDirectories>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
